--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,9 @@
 <div id='container'>
-<!-- Your code here -->
-
+  <h1>Shorten</h1> 
+  <!-- <form name="linkInput" ng-submit='addOne()'> -->
+    <input type='text'ng-model='url'>
+    <button ng-click='addLink(url)'>shorten</button>
+  <!-- </form> -->
 </div>
 
 
