--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,4 +1,5 @@
 <div id='container'>
+  <a href="#/links">My links</a>
   <h1>Shorten</h1> 
   <!-- <form name="linkInput" ng-submit='addOne()'> -->
     <input type='text'ng-model='url'>
