--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,9 +1,14 @@
-<div id='signin'>
+<div id='signin' ng-controller='AuthController'>
   <h1>signin</h1>
-  <form name="signinForm" ng-submit='signin()'>
-    <input type='text'ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signin</button>
+  <form name="signinForm" ng-submit='signin(signinForm.$valid)'>
+    <span>Username</span>
+    <input type='text' ng-model='user.username' name='uName' ng-required='true'>
+    <!-- <div ng-show='signinForm.uName.$touched'> -->
+      <span ng-show='isEntered'>Username is required</span>
+    <!-- </div> -->
+    <span>Password</span>
+    <input type="password" ng-model='user.password' name='uPassword' ng-required='true'>
+    <input type='submit' value='submit' />
   </form>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
