--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -3,12 +3,10 @@
   <form name="signinForm" ng-submit='signin(signinForm.$valid)'>
     <span>Username</span>
     <input type='text' ng-model='user.username' name='uName' ng-required='true'>
-    <!-- <div ng-show='signinForm.uName.$touched'> -->
-      <span ng-show='isEntered'>Username is required</span>
-    <!-- </div> -->
     <span>Password</span>
     <input type="password" ng-model='user.password' name='uPassword' ng-required='true'>
     <input type='submit' value='submit' />
+    <span class='incorrect' ng-show='signinAttempt'>Username or Password incorrect</span>
   </form>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
