--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,9 +1,12 @@
 <div id='signup'>
   <h1>signup</h1>
-  <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
+  <form name="signupForm" ng-submit='signup(signupForm.$valid)'>
+    <span>Username</span>
+    <input type='text' ng-model='user.username' ng-required='true'>
+    <span>Password</span>
+    <input type="password" ng-model='user.password' ng-required='true'>
     <button>signup</button>
+    <span class='incorrect' ng-show='signupAttempt'>Username already in use</span>
   </form>
   <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
 </div>
