--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -2,9 +2,9 @@
   <h1>signup</h1>
   <form name="signupForm" ng-submit='signup(signupForm.$valid)'>
     <span>Username</span>
-    <input type='text' ng-model='user.username' ng-required='true'>
+    <input type='text' ng-model='user.username' placeholder='Joe' ng-required='true'>
     <span>Password</span>
-    <input type="password" ng-model='user.password' ng-required='true'>
+    <input type="password" ng-model='user.password' placeholder='secret...' ng-required='true'>
     <button>signup</button>
     <span class='incorrect' ng-show='signupAttempt'>Username already in use</span>
   </form>
