--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,6 +1,7 @@
 <div id='container'>
   <a href="#/shorten">Shorten link</a>
-  <h1>Links</h1> 
+  <h1>Links</h1>
+  <input type='text' placeholder='filter' ng-model='searchText'/>
   <table>
     <thead>
       <tr class="link-header">
@@ -11,7 +12,7 @@
       </tr>
     </thead>
     <tbody>  
-      <tr ng-repeat="link in data.links | orderBy:'-visits' track by $index" ng-click="visitLink(link)">
+      <tr ng-repeat="link in data.links | filter:searchText | orderBy:'-visits'" ng-click="visitLink(link)">
         <td>
         {{ link.url }}
         </td>
